# Projeto_Base

./: .env.exemple  .gitignore  README.md  pyproject.toml
root/: settings.py  urls.py
