[tool.poetry]
name = "big-mechanic"
version = "0.1.0"
description = ""
authors = ["SuperFeliz <linuxeopoder@gmail.com>"]
readme = "README.md"
packages = [{include = "big_mechanic"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
